# arkhitekt

./: .gitignore  Dockerfile  README.md  notebook.ipynb  pyproject.toml  requirements.txt
jobs/: container.job  jupyter.job  train.job
