[tool.poetry]
name = "arkhitekt"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.10"
dm-haiku = "^0.0.9"
optax = "^0.1.5"
jraph = "^0.0.6.dev0"
jupyterlab = "^3.6.3"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
typing-extensions = "^4.5.0"
wandb = "^0.15.2"
jaxlib = "^0.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
